# ai-agent-extensions

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  WORK_PLAN.md
.claude-plugin/: marketplace.json  plugin.json
docs/: CONTRIBUTING.md  DEVELOPMENT_GUIDE.md
plugins/claude-agent-app-builder/: README.md
plugins/claude-agent-app-builder/.claude-plugin/: plugin.json
plugins/claude-agent-app-builder/agents/: agent-developer.md
plugins/claude-agent-app-builder/commands/: claude-agent.md
plugins/claude-agent-app-builder/skills/agent-sdk-patterns/: SKILL.md
plugins/claude-agent-app-builder/templates/python/: agent.py  custom_tool.py  pyproject.toml
plugins/claude-agent-app-builder/templates/typescript/: agent.ts  custom-tool.ts  package.json  tsconfig.json
plugins/docs-plugin/: README.md
plugins/github-flow-plugin/: README.md
plugins/github-flow-plugin/commands/: github-flow.md
plugins/manual-generator-plugin/: README.md
plugins/manual-generator-plugin/commands/: manual.md
plugins/novel-writer-plugin/: README.md
plugins/plugin-generator-plugin/: README.md
plugins/plugin-generator-plugin/commands/: plugin-generator.md
plugins/quality-guardian-plugin/: README.md
plugins/skill-generator-plugin/: README.md
plugins/tdd-workflow-plugin/: README.md
